--- a/public/index.html
+++ b/public/index.html
@@ -8,11 +8,10 @@
       name="description"
       content="Dictionary App, created during SheCodes course"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-
+    <link rel="shortcut icon" href="./dictionary.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <title>React App</title>
+    <title>Dictionary React App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
